[gd_scene load_steps=4 format=3 uid="uid://52r4xywpqsct"]

[ext_resource type="StyleBox" uid="uid://bckf7vybjoaps" path="res://assets/node_styles/style_panel_secondary.tres" id="1_qa1h1"]
[ext_resource type="Script" path="res://modules/default_modules/project_settings_menu/project_settings_menu.gd" id="1_t57cn"]
[ext_resource type="LabelSettings" uid="uid://dhiw8blnu367c" path="res://assets/node_styles/category_label.tres" id="2_kmc4x"]

[node name="ProjectSettingsMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_qa1h1")
script = ExtResource("1_t57cn")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProjectSettingsVBox" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="MainCategoryLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox"]
layout_mode = 2
text = "Main"
label_settings = ExtResource("2_kmc4x")

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox"]
layout_mode = 2

[node name="TitleHBox" type="HBoxContainer" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/TitleHBox"]
layout_mode = 2
text = "Title:"

[node name="TitleLineEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/TitleHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionHBox" type="HBoxContainer" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox"]
layout_mode = 2
text = "Resolution:"

[node name="HBox" type="HBoxContainer" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox"]
layout_mode = 2
text = "X:"

[node name="ResolutionXSpinBox" type="SpinBox" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10000.0

[node name="YLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox"]
layout_mode = 2
text = "   Y:"

[node name="ResolutionYSpinBox" type="SpinBox" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10000.0

[node name="FramerateHBox" type="HBoxContainer" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox"]
layout_mode = 2

[node name="FramerateLabel" type="Label" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/FramerateHBox"]
layout_mode = 2
text = "Framerate:"

[node name="FramerateSpinBox" type="SpinBox" parent="ScrollContainer/CenterContainer/ProjectSettingsVBox/FramerateHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0

[connection signal="text_changed" from="ScrollContainer/CenterContainer/ProjectSettingsVBox/TitleHBox/TitleLineEdit" to="." method="_on_title_line_edit_text_changed"]
[connection signal="value_changed" from="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox/ResolutionXSpinBox" to="." method="_on_resolution_x_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/CenterContainer/ProjectSettingsVBox/ResolutionHBox/HBox/ResolutionYSpinBox" to="." method="_on_resolution_y_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/CenterContainer/ProjectSettingsVBox/FramerateHBox/FramerateSpinBox" to="." method="_on_framerate_spin_box_value_changed"]
